Změna velkosti "nadpisů"

--- a/ukol8.ipynb
+++ b/ukol8.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data si načti pomocí metody pandas.read_csv(). Pozor, nastav oddělovač na znak středníku. Využij parametr sep."
+    "#### Data si načti pomocí metody pandas.read_csv(). Pozor, nastav oddělovač na znak středníku. Využij parametr sep."
    ]
   },
   {
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seznam se s daty. Kolik má tabulka řádek a sloupců? Jak se sloupce jmenují?"
+    "#### Seznam se s daty. Kolik má tabulka řádek a sloupců? Jak se sloupce jmenují?"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Které zvíře se nachází na záznamu s indexem 34? Vypiš pomocí iloc název tohoto zvířete v češtině i angličtině."
+    "#### Které zvíře se nachází na záznamu s indexem 34? Vypiš pomocí iloc název tohoto zvířete v češtině i angličtině."
    ]
   },
   {
@@ -330,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Načti znovu data, ale tentokrát nastav parametr index_col na název sloupce, který obsahuje název zvířete v češtině. Všimni si, že sloupec teď povýší na index a už se nenachází mezi \"běžnými\" sloupci."
+    "#### Načti znovu data, ale tentokrát nastav parametr index_col na název sloupce, který obsahuje název zvířete v češtině. Všimni si, že sloupec teď povýší na index a už se nenachází mezi \"běžnými\" sloupci."
    ]
   },
   {
@@ -514,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pomocí <tvoje-promenna>.index.is_unique ověř, zda je nový index unikátní."
+    "#### Pomocí <tvoje-promenna>.index.is_unique ověř, zda je nový index unikátní."
    ]
   },
   {
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seřazený index je efektivnější a přehlednější. Seřaď index pomocí metody .sort_index(). Bacha, metoda vrátí novou tabulku se seřazeným indexem. Budeš tedy chtít přepsat původní tabulku."
+    "#### Seřazený index je efektivnější a přehlednější. Seřaď index pomocí metody .sort_index(). Bacha, metoda vrátí novou tabulku se seřazeným indexem. Budeš tedy chtít přepsat původní tabulku."
    ]
   },
   {
@@ -725,7 +725,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vyhledej řádek indexovaný názvem \"Outloň váhavý\". Namísto metody .iloc využij .loc."
+    "#### Vyhledej řádek indexovaný názvem \"Outloň váhavý\". Namísto metody .iloc využij .loc."
    ]
   },
   {
@@ -801,7 +801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rozsahy fungují podobně jako u číselných indexů. Vyhledej záznamy mezi \"Želva Smithova\" a \"Želva žlutočelá\"."
+    "#### Rozsahy fungují podobně jako u číselných indexů. Vyhledej záznamy mezi \"Želva Smithova\" a \"Želva žlutočelá\"."
    ]
   },
   {
